<resources>
    <string name="app_name">RecyclingUa</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_Lviv">Львів</string>
    <string name="action_Odesa">Одеса</string>
    <string name="action_Zhitomir">Житомир</string>
    <string name="action_choose">Виберіть місто</string>
    <string name="button_maps">Карта</string>
    <string name="button_gallery">Цікаві матеріали</string>
    <string name="button_project">Про проект</string>
    <string name="button_about">Про нас</string>
    <string name="about">Контакти:</string>
    <string name="project_title">НАША ЦІЛЬ</string>
    <string name="project">Залучення організацій громадянського суспільства та
        органів місцевого самоврядування до обговорення проблеми та пошуку способів
        її вирішення, а також підвищення свідомості українців для сприяння виконанню
        екологічних норм Угоди Про Асоціацію (Глава 13 Розділу IV та Глава 6 Розділу V).</string>
    <string name="project_disc">«Впровадження Європейських практик енергозбереження
        та поводження з побутовими відходами в житловому секторі України»</string>
    <string name="project_about">Львівська громадська організація«Центр досліджень
        місцевого самоврядування» реалізовує даний проект в рамках гранту
        «Просування реформ в регіони», що здійснюється Інститутом економічних
        досліджень та політичних консультацій у співпраці з Європейською правдою
        за підтримки Європейського Союзу.</string>

    <string name="aboutus">" – це неурядова аналітична організація, створена у 2007 році з метою сприяння розвитку в Україні місцевого самоврядування і громадянського суспільства загалом."</string>

<string name="aboutus2">"1. Місцеве самоврядування і громадськість.
2. Управління житловою нерухомістю.
3. Муніципальне управління."</string>

    <string name="aboutus3">"1. Експертно-дослідницька діяльність.
2. Консультаційна діяльність.
3. Науково – просвітницька діяльність.
4. Моніторинг діяльності органів місцевого самоврядування та місцевих органів влади.
5. Участь представників Центру в діяльності робочих органів з підготовки  нормативно-правових актів, програм розвитку, стратегій та інших актів органів місцевого самоврядування та центральних органів виконавчої влади."</string>

    <string name="project2">До роботи в проекті залучено організації: </string>
    <string name="project3">"із Польщі - Краківська Асоціація Управителів Нерухомістю;
із Литви - Литовська Асоціація муніципалітетів;
із України - Громадська спілка «Львівська асоціація власників житла і управителів житловою нерухомістю», Львівське регіональне відділення Асоціації Міст України, Асоціація Місцевих Рад «Ради Львівщини», Ужгородський осередок «Спілки власників житла України», Асоціація ОСББ «Містечко», Одеський житловий союз, Всеукраїнська екологічна ГО «МАМА-86», Вознесенська міська ГО «Агентство економічного розвитку», Херсонська Обласна ГО «Регіональна рада підприємців», Фонд власників житла «Сприяння» Громадська некомерційна асоціація власників житла недержавних форм власності «Сприяння» та ін." </string>
    <string name="project4">Зменшення споживання енергії та правильне управління відходами необхідно розпочинати саме з багатоквартирних будинків тому, що: 1) в багатоквартирних будинках зосереджена основна маса населення всіх без виключення вікових груп; 2) на житловий сектор припадає 33,78 відсотків загального кінцевого споживання енергії; 3) тут продукується більшість ТПВ (щорічно Україна продукує 12 мільйонів тон муніципального сміття, 93-95% якого піддається захороненню, розширюючи площі полігонів. </string>

    <string name="site_link">Наша веб-сторінка: <a href="http://eco.cdms.org.ua/">eco.cdms.org.ua</a></string>
    <string name="cdmssite_link"><a href="http://www.cdms.org.ua/#!/home">www.cdms.org.ua</a></string>

    <string-array name="city">
        <item>Львів</item>
        <item>Житомир</item>
        <item>Одеса</item>
    </string-array>
    <string name="title_activity_maps2">Map</string>

</resources>
