<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:background="@drawable/main"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <Button
        android:id="@+id/b_maps"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100pt"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="45pt"
        android:layout_marginLeft="10pt"
        android:text="@string/button_maps"
        android:textColor="@android:color/white"
        android:textSize="9pt" />

    <Button
        android:id="@+id/b_gallery"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="220pt"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="10pt"
        android:text="@string/button_gallery"
        android:textColor="@android:color/white"
        android:textSize="9pt" />

    <Button
        android:id="@+id/b_project"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="10pt"
        android:text="@string/button_project"
        android:textColor="@android:color/white"
        android:textSize="9pt" />

    <Button
        android:id="@+id/b_about"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="220pt"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="10pt"
        android:text="@string/button_about"
        android:textColor="@android:color/white"
        android:textSize="9pt" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10pt"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginBottom="10pt"
            android:background="@drawable/facebook"
            android:layout_gravity="bottom"
            android:clickable="true"/>

        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_marginRight="10pt"
            android:layout_marginBottom="10pt"
            android:background="@drawable/twitter"
            android:clickable="true"
            android:layout_gravity="bottom"/>

        <ImageButton
            android:id="@+id/youtube"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_marginRight="10pt"
            android:layout_marginBottom="10pt"
            android:background="@drawable/youtube"
            android:clickable="true"
            android:layout_gravity="bottom"/>

    </LinearLayout>



</LinearLayout>




