<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints"

            tools:layout_editor_absoluteX="0pt"
            tools:layout_editor_absoluteY="91pt">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginRight="7pt"
                android:text="Центр досліджень місцевого самоврядування"
                android:textColor="@color/colorText"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginRight="7pt"
                android:text="@string/aboutus"
                android:textColor="@color/colorText"
                android:textSize="8pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginRight="7pt"
                android:layout_marginTop="5pt"
                android:text="Для досягнення основної мети ми працюємо у таких напрямках:"
                android:textColor="@color/colorText"
                android:textSize="8pt"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginRight="7pt"
                android:text="@string/aboutus2"
                android:textColor="@color/colorText"
                android:textSize="8pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginTop="5pt"
                android:layout_marginRight="7pt"
                android:text="Діяльність у вказаних напрямках полягає у таких формах роботи:"
                android:textColor="@color/colorText"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginRight="7pt"
                android:text="@string/aboutus3"
                android:textColor="@color/colorText"
                android:textSize="8pt" />


            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7pt"
                android:layout_marginTop="5pt"
                android:layout_marginRight="7pt"
                android:text="@string/about"
                android:textColor="@color/colorText"
                android:textSize="8pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5pt"
                android:layout_marginLeft="7pt"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="TODO"

                    app:srcCompat="@drawable/ic_place_black" />

                <TextView
                    android:id="@+id/adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Україна, м.Львів, вул. Руська,3 79008"
                    android:textColor="@color/colorText"
                    android:textSize="8pt" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5pt"
                android:layout_marginLeft="7pt"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_phone_android_black" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="+38-032-235-68-48"
                    android:layout_marginLeft="2pt"
                    android:textColor="@color/colorText"
                    android:textSize="8pt" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5pt"
                android:layout_marginLeft="7pt"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_email_black" />

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="centredms@gmail.com"
                    android:layout_marginLeft="2pt"
                    android:textColor="@color/colorText"
                    android:textSize="8pt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5pt"
                android:layout_marginBottom="5pt"
                android:layout_marginLeft="7pt"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_web_site" />

                <TextView
                    android:id="@+id/cdmssite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2pt"
                    android:text="@string/cdmssite_link"
                    android:textColor="@color/colorText"
                    android:textSize="8pt" />
            </LinearLayout>

        </android.support.design.widget.AppBarLayout>
    </ScrollView>

</RelativeLayout>